# CC-Scheduler

./: .clever.json  Cargo.toml  README.md  clever.rs  config.rs  error.rs  main.rs  scheduler.rs
deploy/: clever-deploy.sh
src/: api.rs  auth.rs  clever.rs  config.rs  db.rs  frontend.html  main.rs  models.rs  scheduler.rs
tools/: clever-destroy.sh
