[package]
name = "cc-scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cc-scheduler"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Clever Cloud SDK (OAuth1 + API token support)
clevercloud-sdk = { version = "^0.13", features = [] }

# Cron scheduler
tokio-cron-scheduler = "0.11"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config & env
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"
