[package]
name = "cc-scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cc-scheduler"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (pour appels API Clever Cloud)
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Cron scheduler
tokio-cron-scheduler = "0.11"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config & env
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# OAuth1 signing
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"
