[package]
name = "cc-scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cc-scheduler"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio-cron-scheduler = "0.11"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"

[dev-dependencies]
wiremock = "0.6"
